--- a/Dia_46_1mayo.Rmd
+++ b/Dia_46_1mayo.Rmd
@@ -2,14 +2,14 @@
 title: "Dia_46_1mayo"
 author: "Daniel Felipe Villa Rengifo"
 date: "1/5/2021"
-output: 
-  html_document: 
+output:
+  html_document:
     toc: yes
     toc_float: yes
 ---
 
 ```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE)
+knitr::opts_chunk$set(eval = FALSE, include = FALSE)
 ```
 
 __Protocolo:__
@@ -41,11 +41,11 @@ Las siguientes son las reglas para escribir una cadena válida en el lenguaje de
 # Como definir un string en R:
 message("# Como definir un string en R:")
 
-print(paste("Hola Mundo", "<=", "Asi se define un string común en R con (comillas dobles)"))
+print(paste("Hola Mundo", "<=", "Así se define un string común en R con (comillas dobles)"))
 
 cadena = "Muy lejos, más allá de las montañas de palabras"
 
-print(paste(cadena, "<=", "Asi se ve como sale esta cadena definida en comillas dobles o simples (sale solo el texto)"))
+print(paste(cadena, "<=", "Así se ve como sale esta cadena definida en comillas dobles o simples (sale solo el texto)"))
 
 ```
 
@@ -150,7 +150,7 @@ El argumento anterior recibe:
 
 2. `type`: Indica uno de los tres tipos, es decir, "width", "chars", "bytes".
 
-3. `allowNA`: Indica un valor lógico por defecto como FALSE y en caso de que el resultado no pueda ser calculado no será un error sino que retornará NA.
+3. `allowNA`: Indica un valor lógico por defecto como FALSE y en caso de que el resultado no pueda ser calculado no será un error, sino que retornará NA.
 
 4. `keepNA`: Indica un valor lógico por defecto como FALSE donde se asignará el valor faltante a 2 y nzchar() dará TRUE, pero ambos se asignarán a TRUE también en el caso de los valores faltantes.
 
@@ -196,7 +196,7 @@ print(tolower(Don_Quijote))
 
 `substr(char, start, stop)`: extracción y sustitución de una cadena de caracteres.
 
-Explicando los items que reciben `substr`:
+Explicando los ítems que reciben `substr`:
 
 1. `char`: indica una cadena de caracteres.
 
@@ -244,7 +244,7 @@ El argumento anterior establece que:
 
 5. `nsmall`: indica el número total después del lugar decimal.
 
-6. `dígits`: indica el número total antes y después del lugar decimal.
+6. `digits`: indica el número total antes y después del lugar decimal.
 
 
 ```{r}
